web: markdown: make large images not overflow container (fixes #8297) (#8300)

--- a/web/src/components/_Markdown.scss
+++ b/web/src/components/_Markdown.scss
@@ -51,6 +51,10 @@
         color: #93a9c8;
         border-left: 4px solid #93a9c8;
     }
+
+    img {
+        max-width: 100%;
+    }
 }
 
 .theme-light {
